# Weather

./: README.md  main.py  requirements.txt  weather.py  weather2.py
gps-location-app/: .env.example  README.md  pyproject.toml  requirements.txt
gps-location-app/docs/: usage.md
gps-location-app/scripts/: run_android.sh  run_desktop.sh
gps-location-app/src/: app.py  config.py  gps_provider.py  main.py  utils.py
gps-location-app/src/services/: gps_service.py
gps-location-app/src/ui/: app.kv
gps-location-app/tests/: test_gps.py
