[tool.poetry]
name = "gps-location-app"
version = "0.1.0"
description = "A Python application to retrieve GPS location."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
kivy = "^2.0.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"